[tool.poetry]
name = "LLM-Testing"
version = "0.1.0"
description = ""
authors = ["Guy Chahine <guychahine@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.33.1"
torch = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
